added ai memory service

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.23.3",
     "@hookform/resolvers": "^3.3.1",
+    "@pinecone-database/pinecone": "^0.1.6",
     "@prisma/client": "^5.2.0",
     "@radix-ui/react-avatar": "^1.0.3",
     "@radix-ui/react-dialog": "^1.0.4",
@@ -23,6 +24,8 @@
     "@types/node": "20.5.7",
     "@types/react": "18.2.21",
     "@types/react-dom": "18.2.7",
+    "@upstash/ratelimit": "^0.4.4",
+    "@upstash/redis": "^1.22.0",
     "ai": "^2.2.11",
     "autoprefixer": "10.4.15",
     "axios": "^1.5.0",
@@ -30,6 +33,7 @@
     "clsx": "^2.0.0",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "langchain": "^0.0.141",
     "lucide-react": "^0.271.0",
     "next": "13.4.19",
     "next-cloudinary": "^4.20.0",
