--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.5.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dotenv": "^16.3.1",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "langchain": "^0.0.141",
@@ -38,12 +39,15 @@
     "next": "13.4.19",
     "next-cloudinary": "^4.20.0",
     "next-themes": "^0.2.1",
+    "openai": "^4.4.0",
+    "openai-edge": "^1.2.2",
     "postcss": "8.4.29",
     "query-string": "^8.1.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.46.0",
     "react-spinners": "^0.13.8",
+    "replicate": "^0.12.3",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
